# BubbleTeaPy

./: .envrc.example  .gitignore  justfile  pyproject.toml
docs/: readme.md
module/: requirements.txt
module/bubbleteapy/: __init__.py
