[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PythonBubbleTea"
version = "0.0.2"
authors = [{ name="Fernando Woitschach", email="ferwoitschach@proton.me" }]
description = "Go's BubbleTea Python port."
readme = "docs/readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["module/source"]

[tool.hatch.build.targets.wheel.sources]
"module/source" = "tea"

